<resources>
    <string name="app_name">VKR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_master_key">Ввод мастер ключа</string>
    <string name="enter_master_key_2">Введите мастер ключ</string>
    <string name="repeat_master_key">Повторите мастер ключ</string>
    <string name="confirm">Подтвердить</string>
    <string name="OK">ОК</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">Главная страница</string>
    <string name="encrypt_files">Шифрование файлов</string>
    <string name="decrypt_files">Расшифрование файлов</string>
    <string name="settings">Настройки</string>
    <string name="master_key">Мастер ключ</string>
    <string name="encrypt">Зашифровать</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="decrypt">Расшифровать</string>
    <string name="requirements_for_master_key">Требования к мастер-ключу</string>
    <string name="little_letters">Использовать строчные буквы?</string>
    <string name="big_letters">Использовать заглавные буквы?</string>
    <string name="special_symbols">Использовать специальные символы?</string>
    <string name="change_master_key">Сменить мастер ключ</string>
    <string name="hint_for_change_master_key">Для смены мастер-ключа необходимо знать предыдущий мастрер-ключ</string>
    <string name="title_activity_change_master_key">Смена мастер ключа</string>
    <string name="_1">1</string>
    <string name="_256">256</string>
    <string name="KeySize">Длина ключа (байт)</string>
    <string name="cipher_algorithm">Алгоритм шифрования</string>
    <string name="cipher_settings">Настройки шифра</string>
    <string name="count">Количество итераций</string>
    <string name="hash_settings">Настройки хэширования</string>
    <string name="hash_algorithm">Алгоритм хэширования</string>
    <string name="_1000">1000</string>
    <string name="settings_signature">Настройки цифровой подписи</string>
    <string name="signature_algorithm">Алгоритм цифровой подписи</string>
    <string name="signature_info">Для подписания, файла необходимо создать сертификаты</string>
    <string name="create_certificate">Создать сертификаты</string>
    <string name="certificate">Сертификаты</string>
    <string name="certificate_work">Работа с сертификатами</string>
    <string name="import_certificate">Импортировать сертификат</string>
    <string name="certificate_export">Экспортировать сертификат</string>
    <string name="city">Город</string>
    <string name="state">Область</string>
    <string name="organization">Организация</string>
    <string name="name">Ф.И.О.</string>
    <string name="department">Отдел</string>
    <string name="enter_data">Ввод данных</string>
    <string name="_8">8</string>
    <string name="_32">32</string>
    <string name="block_app">Блокировка приложения</string>
    <string name="length_block">Длина блокировки (в часах)</string>
    <string name="_72">72</string>
    <string name="count_trying">Количество попыток ввода мастер ключа</string>
    <string name="_10">10</string>
    <string name="work_theme">Тема: Разработка приложения для криптографической защиты файлов на устройствах под управлением операционной системы Android</string>
    <string name="vkr">Выпускная квалификационная работа</string>
</resources>