<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_cipher"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_encrypt"
            android:icon="@drawable/ic_lock"
            android:title="@string/encrypt_files" />
        <item
            android:id="@+id/nav_decrypt"
            android:icon="@drawable/ic_lock_open"
            android:title="@string/decrypt_files" />
        <item
            android:id="@+id/nav_certificate"
            android:icon="@drawable/certificate"
            android:title="@string/certificate" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group android:id="@+id/menu_info">
        <item
            android:id="@+id/freeMemory"
            android:checkable="false"
            android:enabled="true"
            android:icon="@drawable/ic_storage"
            android:title="" />
        <item
            android:id="@+id/app_bar_switch"
            android:icon="@drawable/ic_master_key"
            android:title="@string/master_key"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />

    </group>
</menu>