<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mpei.vkr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_encrypt"
        android:name="mpei.vkr.ui.encrypt.EncryptFragment"
        android:label="@string/encrypt_files"
        tools:layout="@layout/fragment_encrypt" />

    <fragment
        android:id="@+id/nav_decrypt"
        android:name="mpei.vkr.ui.decrypt.DecryptFragment"
        android:label="@string/decrypt_files"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="mpei.vkr.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />
</navigation>