<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="mpei.vkr.ui.settings.items.masterkey.SettingsMasterKeyViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.items.masterkey.SettingsMasterKeyFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.settings.items.masterkey.SettingsMasterKeyFragment">

            <TextView
                android:id="@+id/requirements"
                style="@style/SettingsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_master_key_title"
                android:text="@string/requirements_for_master_key"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxLittle"
                style="@style/TextForSettingsCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_master_key_horizontal"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="@dimen/settings_master_key_horizontal"
                android:buttonTint="#4F0ACC"
                android:checked="@={viewmodel.littleLetter}"
                android:text="@string/little_letters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requirements"
                tools:layout_constraintBottom_toTopOf="@id/checkBoxBig" />

            <CheckBox
                android:id="@+id/checkBoxBig"
                style="@style/TextForSettingsCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_master_key_horizontal"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="@dimen/settings_master_key_horizontal"
                android:checked="@={viewmodel.bigLetter}"
                android:text="@string/big_letters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxLittle" />

            <CheckBox
                android:id="@+id/checkBoxSpecial"
                style="@style/TextForSettingsCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_master_key_horizontal"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="@dimen/settings_master_key_horizontal"
                android:checked="@={viewmodel.specialSymbols}"
                android:text="@string/special_symbols"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxBig" />

            <SeekBar
                android:id="@+id/seekBarLength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/seek_bar_horizontal"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="@dimen/seek_bar_horizontal"
                android:max="32"
                android:min="8"
                android:theme="@style/SeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxSpecial"
                tools:ignore="UnusedAttribute" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="5dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLength"
                tools:ignore="SmallSp"
                tools:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonChangeMasterKey"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:onClick="@{() -> viewmodel.buttonChange(view)}"
                android:text="@string/change_master_key"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textViewButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_master_key_horizontal"
                android:layout_marginTop="@dimen/settings_master_key_vertical"
                android:layout_marginEnd="@dimen/settings_master_key_horizontal"
                android:layout_marginBottom="@dimen/settings_master_key_vertical"
                android:gravity="center"
                android:text="@string/hint_for_change_master_key"
                android:textAppearance="@style/TextForSettingsTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonChangeMasterKey" />

            <TextView
                android:id="@+id/textView4"
                style="@style/SeekBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/seek_bar_horizontal"
                android:layout_marginTop="@dimen/seek_bar_text"
                android:text="@string/_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarLength" />

            <TextView
                android:id="@+id/textViewLength"
                style="@style/SeekBarMainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewmodel.length}"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/SeekBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/seek_bar_horizontal"
                android:text="@string/_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewLength" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>