<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="mpei.vkr.ui.settings.items.signature.SettingsSignatureViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.settings.items.signature.SettingsSignatureFragment">

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/SettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_signature_title"
                android:text="@string/settings_signature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAlgCipherTitle"
                style="@style/SettingsTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_signature_vertical"
                android:text="@string/signature_algorithm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewSignatureAlgorithm"
                style="@style/SettingsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_signature_vertical"
                android:onClick="@{(view) -> viewmodel.chooseAlgorithm(view)}"
                android:text="@={viewmodel.signatureAlgorithm}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlgCipherTitle" />

            <View
                android:id="@+id/view2"
                style="@style/Line"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/settings_signature_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSignatureAlgorithm" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_cipher_horizontal"
                android:layout_marginTop="@dimen/settings_signature_vertical"
                android:layout_marginEnd="@dimen/settings_cipher_horizontal"
                android:text="@string/signature_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <Button
                android:id="@+id/buttonCreate"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_signature_vertical"
                android:layout_marginBottom="@dimen/settings_signature_vertical"
                android:onClick="@{(view) -> viewmodel.buttonCertificate(view)}"
                android:text="@string/create_certificate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>